# snapshop

./: .env.example  .gitignore  Cargo.toml  README.md  run.sh
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  redis.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/datastore/: Cargo.toml
crates/datastore/src/: lib.rs
crates/env/: Cargo.toml
crates/env/src/: lib.rs
crates/json_error/: Cargo.toml
crates/json_error/json_error_derive/: Cargo.toml
crates/json_error/json_error_derive/src/: lib.rs
crates/json_error/src/: lib.rs
crates/json_response/: Cargo.toml
crates/json_response/json_response_derive/: Cargo.toml
crates/json_response/json_response_derive/src/: lib.rs
crates/json_response/src/: lib.rs
crates/locale/: Cargo.toml
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
scripts/: run.sh
src/: main.rs
src/modules/: mod.rs  utils.rs
src/modules/account/: mod.rs  model.rs  service.rs
