workspace = { members = [
    "crates/env",
    "crates/cache",
    "crates/crypto",
    "crates/datastore",
    "crates/locale",
    "crates/queue",
    "crates/json_response",
] }

[package]
name = "snapshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1.0.215"
serde_json = "1.0.133"
mongodb = { version = "3.1.0", features = ["sync", "zlib-compression"] }
salvo = { version = "0.75.0", features = [
    "affix-state",
    "jwt-auth",
    "logging",
    "sse",
    "websocket",
    "cors",
    "rate-limiter",
    "test",
] }
regex = "1.11.1"
lazy_static = "1.5.0"

datastore = { path = "crates/datastore" }
crypto = { path = "crates/crypto" }
env = { path = "crates/env" }
json_response = { path = "crates/json_response" }

[build-dependencies]
tonic-build = "0.12.3"
