[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.1"
aes = "0.8.4"
base64 = "0.22.0"
cbc = { version = "0.1.2", features = ["std"] }
rand = "0.8.5"
lazy_static = "1.5.0"
